--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
             <div class="centered-form__box">
                 <h1>Join</h1>
                 <form action="/chat.html">
-                    <label>Display Name</label>
-                    <input type="text" name="username" placeholder="Display Name" required>
+                    <label>Username</label>
+                    <input type="text" name="username" placeholder="username" required>
                     <label>Room</label>
-                    <input type="text" name="room" placeholder="Room" required>
+                    <input type="text" name="room" placeholder="room" required>
                     <button>Join</button>
                 </form>
             </div>
