--- a/public/chat.html
+++ b/public/chat.html
@@ -42,7 +42,7 @@
                         <input name="message" id="message" placeholder="message" required autocomplete="off" disabled>
                         <button id="sendButton" name="sendButton" disabled>Send</button>
                     </form>
-                    <button id="send-location">Send location</button>
+                    <!-- <button id="send-location">Send location</button> -->
                 </div>
 
                 
@@ -60,7 +60,7 @@
             </div>
         </script>
 
-        <script id="location-message-template" type="text/html">
+        <!--script id="location-message-template" type="text/html">
             <div class="message">
                 <p>
                     <span class="message__name">{{username}}</span>
@@ -68,7 +68,7 @@
                 </p>
                 <p><a href="{{url}}" target="_blank">my current location</a></p>
             </div>
-        </script>
+        </script-->
 
         <script id="sidebar-template" type="text/html">
             <h2 class="room-title">{{room}}</h2>
@@ -87,6 +87,6 @@
         <!--script src="/js/app.js"></script-->
         <script src="/socket.io/socket.io.js"></script>
         <script type="module" src="/js/app.js"></script>
-
+    
     </body>
 </html>
