--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
     <head>
         <title>Chat App</title>
         <link rel="icon" href="/img/favicon.png">
-        <link rel="stylesheet" href="/css/styles.min.css">
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
-        <div class="centered-form">
+        <div class="homepage-left-div">
+        
+        <div class="right-form">
             <div class="centered-form__box">
                 <h1>Join</h1>
                 <form action="/chat.html">
@@ -17,6 +19,8 @@
                     <button>Join</button>
                 </form>
             </div>
+        </div>
+
         </div>
     </body>
 </html>
